--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
  <head>
    <meta charset="utf-8">
    <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,600,700&display=swap">
    <title>The Box-sizer</title>
  </head>
  <body>
